[PROD-9295] Fixed emoji picker positioning and visibility in readylaunch modal

--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_utilities.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_utilities.scss
@@ -428,7 +428,8 @@ span.atwho-inserted {
 }
 
 // Emoji Picker
-.emojionearea-standalone.emojionearea {
+.emojionearea-standalone.emojionearea,
+.bb-rl-emojionearea-theatre.emojionearea {
 
 	.emojionearea-picker {
 		border-radius: var(--bb-rl-radius-lg);
